EgyParser.java
// Generated from Egy.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class EgyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LBRACKET=1, RBRACKET=2, LBRACE=3, RBRACE=4, CHAR=5, SHORT=6, INT=7, LONG=8, 
		LONGER=9, FLOAT=10, DOUBLE=11, STRING=12, FUNCTION=13, COLON=14, LPAREN=15, 
		RPAREN=16, RIGHTARROW=17, COMMA=18, VOID=19, TRUE=20, FALSE=21, ID=22, 
		BINARYLITERAL=23, DECIMALLITERAL=24, OCTALLITERAL=25, HEXADECIMALLITERAL=26, 
		ASSIGN=27, SEMICOLON=28, CONST=29, LET=30, DO=31, WHILE=32, REPEAT=33, 
		UNTIL=34, FOR=35, IN=36, IF=37, ELSE=38, PRINT=39, RETURN=40, AND=41, 
		OR=42, EQUALS=43, NOTEQUALTO=44, LESSTHAN=45, LESSTHANOREQUALTO=46, GREATERTHAN=47, 
		GREATERTHANOREQUALTO=48, PLUS=49, MINUS=50, TIMES=51, DIVIDE=52, MOD=53, 
		LSHIFT=54, RSHIFT=55, POW=56, NOT=57, SINGLEQUOTE=58, SingleCharacter=59, 
		EscapeSequence=60, UnterminatedStringLiteral=61, DOUBLEQUOTE=62;
	public static final int
		RULE_type = 0, RULE_type_suffix = 1, RULE_discrete_type = 2, RULE_function_type = 3, 
		RULE_parameter_types = 4, RULE_return_type = 5, RULE_literal = 6, RULE_array_literal = 7, 
		RULE_discrete_literal = 8, RULE_boolean_literal = 9, RULE_function_definition = 10, 
		RULE_numeric_literal = 11, RULE_set_literal = 12, RULE_statement = 13, 
		RULE_assignment_statement = 14, RULE_const_initialization_statement = 15, 
		RULE_declaration_statement = 16, RULE_initialization_statement = 17, RULE_lvalue = 18, 
		RULE_rvalue = 19, RULE_function_call = 20, RULE_function_call_suffix = 21, 
		RULE_argument_list = 22, RULE_compound_statement = 23, RULE_do_while_statement = 24, 
		RULE_while_statement = 25, RULE_repeat_statement = 26, RULE_for_statement = 27, 
		RULE_for_iterable = 28, RULE_if_statement = 29, RULE_print_statement = 30, 
		RULE_return_statement = 31, RULE_logical_expression = 32, RULE_relational_expression = 33, 
		RULE_simple_expression = 34, RULE_term = 35, RULE_factor = 36, RULE_base = 37, 
		RULE_negation = 38, RULE_char_literal = 39, RULE_string_literal = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "type_suffix", "discrete_type", "function_type", "parameter_types", 
			"return_type", "literal", "array_literal", "discrete_literal", "boolean_literal", 
			"function_definition", "numeric_literal", "set_literal", "statement", 
			"assignment_statement", "const_initialization_statement", "declaration_statement", 
			"initialization_statement", "lvalue", "rvalue", "function_call", "function_call_suffix", 
			"argument_list", "compound_statement", "do_while_statement", "while_statement", 
			"repeat_statement", "for_statement", "for_iterable", "if_statement", 
			"print_statement", "return_statement", "logical_expression", "relational_expression", 
			"simple_expression", "term", "factor", "base", "negation", "char_literal", 
			"string_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "CHAR", "SHORT", "INT", 
			"LONG", "LONGER", "FLOAT", "DOUBLE", "STRING", "FUNCTION", "COLON", "LPAREN", 
			"RPAREN", "RIGHTARROW", "COMMA", "VOID", "TRUE", "FALSE", "ID", "BINARYLITERAL", 
			"DECIMALLITERAL", "OCTALLITERAL", "HEXADECIMALLITERAL", "ASSIGN", "SEMICOLON", 
			"CONST", "LET", "DO", "WHILE", "REPEAT", "UNTIL", "FOR", "IN", "IF", 
			"ELSE", "PRINT", "RETURN", "AND", "OR", "EQUALS", "NOTEQUALTO", "LESSTHAN", 
			"LESSTHANOREQUALTO", "GREATERTHAN", "GREATERTHANOREQUALTO", "PLUS", "MINUS", 
			"TIMES", "DIVIDE", "MOD", "LSHIFT", "RSHIFT", "POW", "NOT", "SINGLEQUOTE", 
			"SingleCharacter", "EscapeSequence", "UnterminatedStringLiteral", "DOUBLEQUOTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Egy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EgyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Discrete_typeContext discrete_type() {
			return getRuleContext(Discrete_typeContext.class,0);
		}
		public List<Type_suffixContext> type_suffix() {
			return getRuleContexts(Type_suffixContext.class);
		}
		public Type_suffixContext type_suffix(int i) {
			return getRuleContext(Type_suffixContext.class,i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			discrete_type();
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83);
					type_suffix();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_suffixContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(EgyParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(EgyParser.RBRACKET, 0); }
		public Numeric_literalContext numeric_literal() {
			return getRuleContext(Numeric_literalContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(EgyParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(EgyParser.RBRACE, 0); }
		public Type_suffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_suffix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterType_suffix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitType_suffix(this);
		}
	}

	public final Type_suffixContext type_suffix() throws RecognitionException {
		Type_suffixContext _localctx = new Type_suffixContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type_suffix);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(LBRACKET);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 125829120L) != 0)) {
					{
					setState(90);
					numeric_literal();
					}
				}

				setState(93);
				match(RBRACKET);
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(LBRACE);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 125829120L) != 0)) {
					{
					setState(95);
					numeric_literal();
					}
				}

				setState(98);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Discrete_typeContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(EgyParser.CHAR, 0); }
		public TerminalNode SHORT() { return getToken(EgyParser.SHORT, 0); }
		public TerminalNode INT() { return getToken(EgyParser.INT, 0); }
		public TerminalNode LONG() { return getToken(EgyParser.LONG, 0); }
		public TerminalNode LONGER() { return getToken(EgyParser.LONGER, 0); }
		public TerminalNode FLOAT() { return getToken(EgyParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(EgyParser.DOUBLE, 0); }
		public TerminalNode STRING() { return getToken(EgyParser.STRING, 0); }
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public Discrete_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_discrete_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterDiscrete_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitDiscrete_type(this);
		}
	}

	public final Discrete_typeContext discrete_type() throws RecognitionException {
		Discrete_typeContext _localctx = new Discrete_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_discrete_type);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(CHAR);
				}
				break;
			case SHORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(SHORT);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				match(INT);
				}
				break;
			case LONG:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				match(LONG);
				}
				break;
			case LONGER:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				match(LONGER);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				match(FLOAT);
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				match(DOUBLE);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				match(STRING);
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 9);
				{
				setState(109);
				function_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_typeContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(EgyParser.FUNCTION, 0); }
		public TerminalNode COLON() { return getToken(EgyParser.COLON, 0); }
		public TerminalNode LPAREN() { return getToken(EgyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(EgyParser.RPAREN, 0); }
		public TerminalNode RIGHTARROW() { return getToken(EgyParser.RIGHTARROW, 0); }
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public Parameter_typesContext parameter_types() {
			return getRuleContext(Parameter_typesContext.class,0);
		}
		public Function_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterFunction_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitFunction_type(this);
		}
	}

	public final Function_typeContext function_type() throws RecognitionException {
		Function_typeContext _localctx = new Function_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(FUNCTION);
			setState(113);
			match(COLON);
			setState(114);
			match(LPAREN);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16352L) != 0)) {
				{
				setState(115);
				parameter_types();
				}
			}

			setState(118);
			match(RPAREN);
			setState(119);
			match(RIGHTARROW);
			setState(120);
			return_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parameter_typesContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EgyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EgyParser.COMMA, i);
		}
		public Parameter_typesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterParameter_types(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitParameter_types(this);
		}
	}

	public final Parameter_typesContext parameter_types() throws RecognitionException {
		Parameter_typesContext _localctx = new Parameter_typesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameter_types);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			type();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(123);
				match(COMMA);
				setState(124);
				type();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(EgyParser.VOID, 0); }
		public Return_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterReturn_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitReturn_type(this);
		}
	}

	public final Return_typeContext return_type() throws RecognitionException {
		Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_return_type);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHAR:
			case SHORT:
			case INT:
			case LONG:
			case LONGER:
			case FLOAT:
			case DOUBLE:
			case STRING:
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				type();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public Array_literalContext array_literal() {
			return getRuleContext(Array_literalContext.class,0);
		}
		public Discrete_literalContext discrete_literal() {
			return getRuleContext(Discrete_literalContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public Set_literalContext set_literal() {
			return getRuleContext(Set_literalContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_literal);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				array_literal();
				}
				break;
			case LPAREN:
			case TRUE:
			case FALSE:
			case BINARYLITERAL:
			case DECIMALLITERAL:
			case OCTALLITERAL:
			case HEXADECIMALLITERAL:
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				discrete_literal();
				}
				break;
			case UnterminatedStringLiteral:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				string_literal();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				set_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Array_literalContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(EgyParser.LBRACKET, 0); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(EgyParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(EgyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EgyParser.COMMA, i);
		}
		public Array_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterArray_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitArray_literal(this);
		}
	}

	public final Array_literalContext array_literal() throws RecognitionException {
		Array_literalContext _localctx = new Array_literalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(LBRACKET);
			setState(141);
			literal();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(142);
				match(COMMA);
				setState(143);
				literal();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Discrete_literalContext extends ParserRuleContext {
		public Char_literalContext char_literal() {
			return getRuleContext(Char_literalContext.class,0);
		}
		public Boolean_literalContext boolean_literal() {
			return getRuleContext(Boolean_literalContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Numeric_literalContext numeric_literal() {
			return getRuleContext(Numeric_literalContext.class,0);
		}
		public Discrete_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_discrete_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).enterDiscrete_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EgyListener ) ((EgyListener)listener).exitDiscrete_literal(this);
		}
	}

	public final Discrete_literalContext discrete_literal() throws RecognitionException {
		Discrete_literalContext _localctx = new Discrete_literalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_discrete_literal);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				char_literal();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				boolean_literal();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				function_definition();
				}
				break;
			case BINARYLITERAL:
			case DECIMALLITERAL:
			case OCTALLITERAL:
			case HEXADECIMALLITERAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				numeric_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
